Bug 286103 - Crash while writing Mail and selecting recipients from SOGo - Groupware account
Summary: Crash while writing Mail and selecting recipients from SOGo - Groupware account
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-08 12:53 UTC by Christian Holzberger
Modified: 2011-11-08 22:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Holzberger 2011-11-08 12:53:17 UTC
Application: kontact (4.7.3)
KDE Platform Version: 4.7.3 (4.7.3)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-12-generic x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:

i was writing a new mail and wanted to select a new recipient, the contact selection dialog showed up. i selected the contact, pressed ok and kmail crashed

The crash can be reproduced some of the time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f228cf097a0 (LWP 9617))]

Thread 4 (Thread 0x7f227371f700 (LWP 9627)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f228976bc2c in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007f228976bd59 in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007f2284b67efc in start_thread (arg=0x7f227371f700) at pthread_create.c:304
#4  0x00007f228a47989d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f2272e1e700 (LWP 9632)):
#0  0x00007f2284b6a034 in __pthread_mutex_lock (mutex=0x18cd788) at pthread_mutex_lock.c:61
#1  0x00007f2284098649 in g_main_context_acquire () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f2284099d81 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f228409a429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f228b8b4f3e in QEventDispatcherGlib::processEvents (this=0x18cd230, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007f228b888cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f228b888ef7 in QEventLoop::exec (this=0x7f2272e1dde0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007f228b7a027f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#8  0x00007f228b7a2d05 in QThreadPrivate::start (arg=0x18cc940) at thread/qthread_unix.cpp:331
#9  0x00007f2284b67efc in start_thread (arg=0x7f2272e1e700) at pthread_create.c:304
#10 0x00007f228a47989d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f221df6a700 (LWP 18352)):
#0  0x00007f228a46d773 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f2284099f68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f228409a429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f228b8b4f3e in QEventDispatcherGlib::processEvents (this=0x5883310, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f228b888cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f228b888ef7 in QEventLoop::exec (this=0x7f221df69db0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f228b7a027f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007f228b86bcbf in QInotifyFileSystemWatcherEngine::run (this=0x587f130) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f228b7a2d05 in QThreadPrivate::start (arg=0x587f130) at thread/qthread_unix.cpp:331
#9  0x00007f2284b67efc in start_thread (arg=0x7f221df6a700) at pthread_create.c:304
#10 0x00007f228a47989d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f228cf097a0 (LWP 9617)):
[KCrash Handler]
#6  QString::operator= (this=0x20, other=...) at tools/qstring.cpp:1359
#7  0x00007f2287d37f8d in KPIM::ProgressItem::setStatus (this=0x0, v=<optimized out>) at ../../libkdepim/progressmanager.cpp:118
#8  0x00007f222eae7e82 in KMail::BackupJob::finish (this=0x901df30) at ../../kmail/backupjob.cpp:168
#9  0x00007f222eaea065 in KMail::BackupJob::archiveNextFolder (this=0x901df30) at ../../kmail/backupjob.cpp:312
#10 0x00007f222eaeb7b0 in KMail::BackupJob::archiveNextMessage (this=0x901df30) at ../../kmail/backupjob.cpp:201
#11 0x00007f222eaebdcc in KMail::BackupJob::qt_metacall (this=0x901df30, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x60879e0) at ./backupjob.moc:83
#12 0x00007f228b8a0a5e in QObject::event (this=0x901df30, e=<optimized out>) at kernel/qobject.cpp:1217
#13 0x00007f228ac3a424 in notify_helper (e=0xbfd0010, receiver=0x901df30, this=0x18bf7e0) at kernel/qapplication.cpp:4486
#14 QApplicationPrivate::notify_helper (this=0x18bf7e0, receiver=0x901df30, e=0xbfd0010) at kernel/qapplication.cpp:4458
#15 0x00007f228ac3f291 in QApplication::notify (this=0x7fff2977ca90, receiver=0x901df30, e=0xbfd0010) at kernel/qapplication.cpp:4365
#16 0x00007f228c2bf126 in KApplication::notify (this=0x7fff2977ca90, receiver=0x901df30, event=0xbfd0010) at ../../kdeui/kernel/kapplication.cpp:311
#17 0x00007f228b889afc in QCoreApplication::notifyInternal (this=0x7fff2977ca90, receiver=0x901df30, event=0xbfd0010) at kernel/qcoreapplication.cpp:787
#18 0x00007f228b88d51f in sendEvent (event=0xbfd0010, receiver=0x901df30) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#19 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x18908e0) at kernel/qcoreapplication.cpp:1428
#20 0x00007f228b8b4a73 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#21 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#22 0x00007f2284099a5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#23 0x00007f228409a258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#24 0x00007f228409a429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007f228b8b4ed6 in QEventDispatcherGlib::processEvents (this=0x1891fd0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#26 0x00007f228ace207e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#27 0x00007f228b888cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#28 0x00007f228b888ef7 in QEventLoop::exec (this=0x7fff2977ca20, flags=...) at kernel/qeventloop.cpp:201
#29 0x00007f228b88d789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#30 0x0000000000403629 in main (argc=1, argv=0x7fff2977d0b8) at ../../../kontact/src/main.cpp:218

Possible duplicates by query: bug 249195.

Reported using DrKonqi
Comment 1 Allen Winter 2011-11-08 22:27:37 UTC
fixed in master with commit 7bdccde9a6cd6a9ea4502a5623c91b56de65b8fa

need to backport to 4.7