In finish(), put a crash guard on mProgressItem.

BUG: 286103
MERGE: 4.7