mailcommon/backupjob.cpp
@@ -47,7 +47,7 @@ BackupJob::BackupJob( QWidget *parent )
     mProgressItem( 0 ),
     mAborted( false ),
     mDeleteFoldersAfterCompletion( false ),
-    mRecursive( true ), 
+    mRecursive( true ),
     mCurrentFolder( Akonadi::Collection() ),
     mCurrentJob( 0 )
 {
@@ -173,9 +173,11 @@ void BackupJob::finish()
   const QString archivingStr( i18n( "Archiving finished" ) );
   KPIM::BroadcastStatus::instance()->setStatusMsg( archivingStr );
 
-  mProgressItem->setStatus( archivingStr );
-  mProgressItem->setComplete();
-  mProgressItem = 0;
+  if ( mProgressItem ) {
+    mProgressItem->setStatus( archivingStr );
+    mProgressItem->setComplete();
+    mProgressItem = 0;
+  }
 
   QFileInfo archiveFileInfo( mMailArchivePath.path() );
   QString text = i18n( "Archiving folder '%1' successfully completed. "
@@ -324,10 +326,11 @@ void BackupJob::archiveNextFolder()
   mCurrentFolder = mPendingFolders.takeAt( 0 );
   kDebug() << "===> Archiving next folder: " << mCurrentFolder.name();
   const QString archivingStr( i18n( "Archiving folder %1", mCurrentFolder.name() ) );
-  if( mProgressItem )
-     mProgressItem->setStatus( archivingStr );
+  if ( mProgressItem ) {
+    mProgressItem->setStatus( archivingStr );
+  }
   KPIM::BroadcastStatus::instance()->setStatusMsg( archivingStr );
-  
+
   const QString folderName = mCurrentFolder.name();
   bool success = true;
   if ( hasChildren( mCurrentFolder ) ) {
